examples/pts/pos/blockLiteral.effekt
module examples/pts/pos/blockLiteral

effect Eff(): Unit
effect InterfaceEff { def run(): Unit }

def outer{interfaceEff: InterfaceEff} = {
    val func: () => Unit / _ at _ = fun() {
        do Eff();
        interfaceEff.run()
        ()
    }
    func
}

def main() = {
    ()
}